infra/ms-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-gateway
  template:
    metadata:
      labels:
        app: ms-gateway
    spec:
      containers:
        - name: ms-gateway
          image: lukinhasssss/ms-gateway

---

apiVersion: v1
kind: Service
metadata:
  name: ms-gateway-clusterip-service
spec:
  selector:
    app: ms-gateway
  ports:
    - name: ms-gateway
      protocol: TCP
      port: 9999
      targetPort: 9999
