infra/ms-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-gateway-service
spec:
  type: NodePort
  selector:
    app: ms-gateway
  ports:
  - name: ms-gateway
    protocol: TCP
    port: 8080
    targetPort: 8080
